fix: add overflow-y to avoid layout shifting

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,4 +19,5 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-y: scroll;
 }
